[package]
name = "tsldb"
version = "0.1.0"
edition = "2021"

[dependencies]
bitpacking = "0.8.4"
chrono = "0.4.23"
config = "0.13.1"
crossbeam = "0.8.2"
dashmap = { version = "5.4.0", features = ["serde"] }
integer-encoding = "3.0.4"
lazy_static = "1.4.0"
log = "0.4"
metricsql_engine = { git = "https://github.com/ccollie/metricsql", branch = "main" }
metricsql_parser = { git = "https://github.com/ccollie/metricsql", branch = "main" }
redis-module = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tsz = "0.1.4"
zstd = "0.12"
byte-pool = "0.2.3"
lockfree-object-pool = "0.1.3"
byte-slice-cast = "1.2.1"
lz4_flex = "0.11.1"
q_compress = "0.11.6"
roaring = "0.10.2"

[dev-dependencies]
env_logger = "*"
rand = "*"
tempfile = "*"
tempdir = "*"
test-case = "*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5.6" }
